# ros2_ws

./: .gitignore  README.md
src/carrot_ros/: CMakeLists.txt  package.xml
src/carrot_ros/config/: slam_toolbox.yaml
src/carrot_ros/launch/: odometry_launch.py  rplidar_launch.py  slam_launch.py
src/carrot_ros/rviz/: urdf_config.rviz
src/carrot_ros/src/: click_navigation_node.cpp  cmd_vel_to_motors.cpp
src/carrot_ros/urdf/: carrot_robot.urdf
src/uart_odom_publisher/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/uart_odom_publisher/launch/: teleop.launch.py  teleop_joy.launch.py  uart_odom.launch.py
src/uart_odom_publisher/uart_odom_publisher/: keyboard_control.py  teleop_joy.py  teleop_node.py  uart_odom_node.py
src/uart_odom_publisher/uart_odom_publisher/raspberry_pi_pico/: collet_tick.py  odom_pico.py
