<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>carrot_ros</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="carrot@todo.todo">carrot</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>uart_odom_publisher</depend>
  <depend>rplidar_ros</depend>
  <depend>slam_toolbox</depend>
  <depend>tf2_ros</depend>
  <depend>nav2_lifecycle_manager</depend>  
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
