<?xml version="1.0"?>
<package format="3">
  <name>uart_odom_publisher</name>
  <version>0.0.0</version>
  <description>UART to Odometry publisher for Raspberry Pi</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>python3-serial</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>joy</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
